--- a/gtrainlovestory/css/styles.css
+++ b/gtrainlovestory/css/styles.css
@@ -7,6 +7,10 @@
 Added
 ========================================================================== */
 
+.warning {
+  color: lightpink;
+}
+
 .header-logo {
   color: white;
 }
@@ -21,7 +25,7 @@ Added
   -webkit-transition-duration: 500ms;
   transition-duration: 500ms;
   -webkit-transition-property: background-color;
-  transition-property: background-color;
+  transition-property: background-color; 
   -webkit-box-shadow: 0px 3px 0px 0px #f0f2f4;
   -moz-box-shadow: 0px 3px 0px 0px #f0f2f4;
   box-shadow: 0px 3px 0px 0px #f0f2f4;
@@ -152,8 +156,9 @@ h1, h2, h3 {
 /* ==========================================================================
 Typography
 ========================================================================== */
+
 p {
-  font-size: 1em;
+  font-size: .75em;
   color: rgba(28, 54, 83, 0.6);
   padding-bottom: 20px;
 }
@@ -192,7 +197,7 @@ h6 {
 }
 
 .btn {
-  font-size: 1em;
+  font-size: .75em;
   border: solid 2px;
   border-radius: 40px;
   display: inline-block;
@@ -206,7 +211,7 @@ h6 {
 }
 
 .btn-white {
-  font-size: 1em;
+  font-size: .75em;
   border: solid 2px;
   border-radius: 40px;
   display: inline-block;
@@ -256,6 +261,7 @@ section.features, section.blog-intro, section.blog {
 /* ==========================================================================
 Global Styles
 ========================================================================== */
+
 .group:after {
   content: "";
   display: table;
@@ -358,39 +364,6 @@ ul li {
 Animations
 ========================================================================== */
 
-.pulse2 {
-  -webkit-animation-name: pulse2;
-          animation-name: pulse2;
-  -webkit-animation-duration: 1s;
-          animation-duration: 1s;
-  -webkit-animation-iteration-count: infinite;
-          animation-iteration-count: infinite;
-  -webkit-animation-timing-function: linear;
-          animation-timing-function: linear;
-        }
-
-@-webkit-keyframes pulse2 {
-  0% {
-    -webkit-transform: scale(1.1);
-            transform: scale(1.1); }
-  50% {
-    -webkit-transform: scale(0.8);
-            transform: scale(0.8); }
-  100% {
-    -webkit-transform: scale(1);
-            transform: scale(1); } }
-
-@keyframes pulse2 {
-  0% {
-    -webkit-transform: scale(1.1);
-            transform: scale(1.1); }
-  50% {
-    -webkit-transform: scale(0.8);
-            transform: scale(0.8); }
-  100% {
-    -webkit-transform: scale(1);
-            transform: scale(1); } }
-
 .floating-arrow {
   -webkit-animation-name: floating-arrow;
           animation-name: floating-arrow;
@@ -423,38 +396,6 @@ Animations
     -webkit-transform: translate(-50%, 0);
             transform: translate(-50%, 0); } }
 
-.floating-logo {
-  -webkit-animation-name: floating-logo;
-          animation-name: floating-logo;
-  -webkit-animation-duration: 2s;
-          animation-duration: 2s;
-  -webkit-animation-iteration-count: infinite;
-          animation-iteration-count: infinite;
-  -webkit-animation-timing-function: ease-in-out;
-          animation-timing-function: ease-in-out; }
-
-@-webkit-keyframes floating-logo {
-  from {
-    -webkit-transform: translate(-50%, 0);
-            transform: translate(-50%, 0); }
-  50% {
-    -webkit-transform: translate(-50%, 10px);
-            transform: translate(-50%, 10px); }
-  to {
-    -webkit-transform: translate(-50%, 0);
-            transform: translate(-50%, 0); } }
-
-@keyframes floating-logo {
-  from {
-    -webkit-transform: translate(-50%, 0);
-            transform: translate(-50%, 0); }
-  50% {
-    -webkit-transform: translate(-50%, 10px);
-            transform: translate(-50%, 10px); }
-  to {
-    -webkit-transform: translate(-50%, 0);
-            transform: translate(-50%, 0); } }
-
 /* ==========================================================================
 Waypoinsts
 ========================================================================== */
@@ -481,74 +422,6 @@ Navigation
   opacity: 0.9;
   -webkit-transition: opacity 0.5s;
   transition: opacity 0.5s;
-}
-
-.nav-toggle {
-  position: absolute;
-  top: 0;
-  right: 15px;
-  z-index: 999999;
-  padding: 10px 35px 16px 0;
-  cursor: pointer;
-}
-
-.nav-toggle:focus {
-  outline: none;
-}
-
-.nav-toggle span, .nav-toggle span:before, .nav-toggle span:after {
-  content: "";
-  position: absolute;
-  display: block;
-  width: 35px;
-  height: 3px;
-  border-radius: 1px;
-  background: #fff;
-  cursor: pointer;
-}
-
-.nav-toggle span:before {
-  top: -10px;
-}
-
-.nav-toggle span:after {
-  bottom: -10px;
-}
-
-.nav-toggle span, .nav-toggle span:before, .nav-toggle span:after {
-  -webkit-transition: all 300ms ease-in-out;
-  transition: all 300ms ease-in-out;
-}
-
-.nav-toggle.active span {
-  background-color: transparent;
-}
-
-.nav-toggle.active span:before, .nav-toggle.active span:after {
-  top: 0;
-}
-
-.nav-toggle.active span:before {
-  -ms-transform: rotate(45deg);
-  -webkit-transform: rotate(45deg);
-  transform: rotate(45deg);
-}
-
-.nav-toggle.active span:after {
-  top: 10px;
-  -ms-transform: translatey(-10px) rotate(-45deg);
-  -webkit-transform: translatey(-10px) rotate(-45deg);
-  transform: translatey(-10px) rotate(-45deg);
-}
-
-.navicon {
-  position: absolute;
-  height: 26px;
-  right: 10px;
-  top: 48px;
-  visibility: hidden;
-  -webkit-transition: all 300ms ease-in-out;
-          transition: all 300ms ease-in-out;
 }
 
 /* ==========================================================================
@@ -581,35 +454,32 @@ Hero
   width: 100%;
   z-index: 999; }
 
-.fixed {
-  position: fixed;
-  background-color: #232731;
-  z-index: 999;
-  width: 100%; }
-
 header {
-  padding: 50px 0;
+  padding: 10px 0;
   border-bottom: solid 1px rgba(255, 255, 255, 0.2);
   position: relative;
-  width: 1170px;
+  width: 96%;
   margin: 0 auto;
   -webkit-transition: padding 300ms ease-in-out;
           transition: padding 300ms ease-in-out; }
   header a {
     color: #fff;
     text-transform: uppercase;
-    font-size: 12px; }
+    letter-spacing: 0.2em;
+    font-size: 11px; }
     header a.login {
       margin-right: 20px; }
   header .logo {
     display: inline-block; }
   header ul.primary-nav {
-    margin: 0 0 0 75px;
-    padding: 0; }
+    margin: 0 0 0 25px;
+    padding: 0;
+    top: 50%;
+    transform: translateY(-50%);
+  }
     header ul.primary-nav li {
       display: inline; }
       header ul.primary-nav li a {
-        color: #fff;
         padding-right: 25px; }
         header ul.primary-nav li a:hover {
           color: rgba(71, 228, 194, 1); }
@@ -626,7 +496,8 @@ header {
   header .member-actions {
     position: absolute;
     right: 0;
-    top: 41px;
+    top: 50%;
+    transform: translateY(-50%);
     -webkit-transition: all 300ms ease-in-out;
             transition: all 300ms ease-in-out; }
 
@@ -667,7 +538,7 @@ Intro
 Features-stack
 ========================================================================== */
 
-.features {
+/*.features {
   position: relative; }
   .features p {
     margin-bottom: 0;
@@ -703,51 +574,17 @@ Features-stack
     border-bottom: solid 1px #E6E9EA; }
   .features ul.features-stack li:last-child {
     padding-bottom: 0px;
-    border-bottom: none; }
-  .features .ipad-wrap {
-    width: 706px;
-    height: 1002px;
-    background: url("../img/dickinson.png") no-repeat center center;
-    z-index: 1; }
-  .features .iphone-wrap {
-    width: 304px;
-    height: 620px;
-    background: url("../img/eliot.png") no-repeat center center;
-    position: absolute;
-    left: 530px;
-    bottom: 129px;
-    z-index: 2; }
-  .features .device-showcase {
-    position: absolute;
-    bottom: -365px;
-    right: 61%; }
+    border-bottom: none; }*/
 
-.features .responsive-feature-img, .features-extra .responsive-feature-img {
-  display: none; }
-
-.devices {
-  position: relative; }
-
-/* ==========================================================================
-.features-extra
-========================================================================== */
-.features-extra {
-  position: relative;
-  z-index: 3; }
-  .features-extra .btn {
-    margin-top: 20px; }
-  .features-extra .macbook-wrap {
-    position: absolute;
-    width: 916px;
-    height: 540px;
-    background: url("../img/theater.png") no-repeat center center;
-    top: 114px;
-    z-index: 4;
-    left: 50%; }
+.dickinson, .eliot, .theater {
+  width: 80%;
+  height: auto;
+}
 
 /* ==========================================================================
 .hero-strip
 ========================================================================== */
+
 .hero-strip {
   margin-top: 120px;
   background: #333844 url("../img/polygonal-bg.jpg") no-repeat center center;
@@ -781,6 +618,7 @@ Features-stack
 /* ==========================================================================
 .blog-intro
 ========================================================================== */
+
 .blog-intro {
   padding-top: 160px; }
   .blog-intro h3 {
@@ -794,6 +632,7 @@ Features-stack
 /* ==========================================================================
 .blog
 ========================================================================== */
+
 .blog {
   padding-bottom: 120px; }
   .blog img {
@@ -848,98 +687,9 @@ Features-stack
     color: #3D4351; }
 
 /* ==========================================================================
-.testimonial-slider
-========================================================================== */
-.testimonial-slider {
-  background: url("../img/testimonials-bg.jpg") no-repeat center center;
-  background-size: cover; }
-  .testimonial-slider .avatar {
-    width: 82px;
-    height: 82px;
-    margin: 0 auto;
-    vertical-align: middle;
-    overflow: hidden;
-    border-radius: 50%;
-    border: solid 3px #fff;
-    background-color: #fff; }
-    .testimonial-slider .avatar img {
-      width: 82px;
-      height: auto; }
-  .testimonial-slider h2 {
-    color: #fff;
-    font-size: 40px;
-    font-weight: 300;
-    font-style: italic;
-    margin: 30px 0; }
-  .testimonial-slider p {
-    color: #ACB1B4;
-    text-transform: uppercase;
-    letter-spacing: 2px; }
-
-/* ==========================================================================
-Sign up form
-========================================================================== */
-.sign-up .signup-form .sign-up-btn {
-  padding: 15px 0;
-  border-radius: 3px;
-  width: 80%;
-  font-size: 13px; }
-.sign-up .signup-form .form-input-group {
-  width: 80%;
-  height: 55px;
-  margin: 0 auto 10px;
-  border-radius: 5px;
-  border: solid 1px #E6E9EA;
-  text-align: left;
-  position: relative; }
-  .sign-up .signup-form .form-input-group i {
-    color: rgba(71, 228, 194, 1);
-    font-size: 14px; }
-  .sign-up .signup-form .form-input-group i:after {
-    content: "";
-    height: 30px;
-    width: 1px;
-    border-right: solid 1px #E6E9EA;
-    position: absolute;
-    top: 50%;
-    left: 30px;
-    -webkit-transform: translateY(-50%);
-        -ms-transform: translateY(-50%);
-            transform: translateY(-50%); }
-  .sign-up .signup-form .form-input-group i.fa-lock {
-    font-size: 18px;
-    position: absolute;
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-        -ms-transform: translateY(-50%);
-            transform: translateY(-50%);
-    margin-left: 20px; }
-  .sign-up .signup-form .form-input-group i.fa-envelope {
-    font-size: 14px;
-    position: absolute;
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-        -ms-transform: translateY(-50%);
-            transform: translateY(-50%);
-    margin-left: 20px; }
-  .sign-up .signup-form .form-input-group input {
-    padding-left: 68px;
-    width: 100%;
-    height: 100%;
-    border-radius: 6px;
-    border: none; }
-  .sign-up .signup-form .form-input-group input::-webkit-input-placeholder {
-    color: #BCC1C3; }
-  .sign-up .signup-form .form-input-group input:-moz-placeholder {
-    color: #BCC1C3; }
-  .sign-up .signup-form .form-input-group input::-moz-placeholder {
-    color: #BCC1C3; }
-  .sign-up .signup-form .form-input-group input:-ms-input-placeholder {
-    color: #BCC1C3; }
-
-/* ==========================================================================
 To top
 ========================================================================== */
+
 .to-top {
   height: 60px;
   background-color: #495061; }
@@ -966,6 +716,7 @@ To top
 /* ==========================================================================
 Footer
 ========================================================================== */
+
 footer {
   background-color: #3D4351;
   position: relative; }
@@ -1039,6 +790,7 @@ footer {
 /* ==========================================================================
 Icon font (http://www.elegantthemes.com/blog/freebie-of-the-week/free-line-style-icons)
 ========================================================================== */
+
 @font-face {
   font-family: 'et-line';
   src: url("../fonts/et-line.eot");
