--- a/gtrainlovestory/css/queries.css
+++ b/gtrainlovestory/css/queries.css
@@ -1,5 +1,4 @@
 @media screen and (max-width:1200px) {
-
 	header {
 		width: 90%;
 		margin: 0 auto;
@@ -16,45 +15,11 @@
 
 }
 
-
-
 @media screen and (max-width:1024px) {
 }
 
-
-
 /* Responsive nav kicks in */
 @media screen and (max-width:991px) {
-
-	.dickinson, .eliot, .theater, .map {
-    width: 100%;
-  }
-
-  .blog .blog-img-wrap {
-  	width: 100%;
-  }
-
-  .peru {
-  	margin-top: 40px;
-  }
-
-  .text-right .poem-number {
-    text-align: left;
-  }
-
-  .conversation-topics {
-  	margin-left: 10px;
-  }
-
-  .accommodations {
-  	font-size: 2.75em;
-  }
-
-  .light-box {
-    margin: 20px;
-    border: 1pt solid rgba(28, 54, 83, .2);
-  }
-
 	header {
 		width: 90%;
 		padding-left: 25px;
@@ -66,7 +31,7 @@
 
 	.header-nav {
 		position: fixed;
-		background-color: #373D4A;
+		background-color: #000;
 		width: 100%;
 		height: 100%;
 		top: 0;
@@ -86,9 +51,9 @@
 		visibility: visible;
 	}
 
-	/*header .nav-wrapper {
+	header .nav-wrapper {
 		display: absolute;
-	}*/
+	}
 
 	header nav {
 		position: relative;
@@ -102,8 +67,9 @@
 
 	nav ul li a {
 		color: #fff;
-		font-size: 1.25em;
+		font-size: 25px;
 		text-transform: uppercase;
+		font-weight: 600;
 		-moz-transition: all 300ms ease-in-out;
 		-o-transition: all 300ms ease-in-out;
 		-webkit-transition: all 300ms ease-in-out;
@@ -218,7 +184,7 @@
 
 	.intro-content {
 		display: inline-block;
-		width: 100%;
+		width: 75%;
 		margin-bottom: 30px;
 	}
 
@@ -269,17 +235,13 @@
 		margin: 120px 0 120px 0;
 	}
 
-}
-
-
 	@media screen and (max-width:640px) {
-
 		footer ul.footer-group {
 			border-top: none;
 		}
 
 		footer ul.footer-group li a {
-			font-size: 1em;
+			font-size: 13px;
 			text-transform: uppercase;
 			padding: 20px 0;
 			display: block;
@@ -296,14 +258,7 @@
 
 	}
 
-
-
 	@media screen and (max-width:480px) {
-		
-		.hero {
-			min-height: 0;
-		}
-
 		.hero .hero-content {
 			padding-top: 41%;
 		}
@@ -319,38 +274,7 @@
 		}
 
 		.hero h1 {
-			font-size: 30px;
-			margin-bottom: 80px;
-		}
-
-    .viddy {
-		  position: relative;
-		  padding-bottom: 56.25%; /* 16:9 */
-		  padding-top: 25px;
-		  height: 0;
-		}
-
-		.viddy iframe {
-		  position: absolute;
-		  top: 0;
-		  left: 0;
-		  width: 100%;
-		  height: 100%;
-		}
-
-		.morgan-okane-viddy {
-		  position: relative;
-		  padding-bottom: 56.25%; /* 16:9 */
-		  padding-top: 25px;
-		  height: 0;
-		}
-
-		.morgan-okane-viddy iframe {
-		  position: absolute;
-		  top: 0;
-		  left: 0;
-		  width: 100%;
-		  height: 100%;
+			font-size: 50px;
 		}
 
 		.btn-margin-right {
@@ -368,7 +292,7 @@
 		.features .ipad-wrap {
 			width: 706px;
 			height: 1002px;
-			background: url("../img/dickinson.png") no-repeat center center;
+			background: url("../img/ipad-device.png") no-repeat center center;
 			z-index: 1;
 			background-size: 40%;
 		}
@@ -376,7 +300,7 @@
 		.features .iphone-wrap {
 			width: 304px;
 			height: 617px;
-			background: url("../img/eliot.png") no-repeat center center;
+			background: url("../img/iphone6.png") no-repeat center center;
 			position: absolute;
 			left: 350px;
 			bottom: 129px;
@@ -392,28 +316,7 @@
 			display: none;
 		}
 
-		p {
-			font-size: 1em;
-		}
-
-		.blog-post p {
-			font-size: 1em;
-		}
-
-		.intro-content, .poem {
-			font-size: 1.5em;
-		}
-
-		.brighten {
-			font-size: .75em;
-		}
-
-		h2 {
-			font-size: 3em;
-		}
-
 	}
 
-  @media screen and (max-device-width:320px) {
-
+	@media screen and (max-width:320px) {
 	}
