--- a/gtrainlovestory/css/queries.css
+++ b/gtrainlovestory/css/queries.css
@@ -1,4 +1,5 @@
 @media screen and (max-width:1200px) {
+
 	header {
 		width: 90%;
 		margin: 0 auto;
@@ -15,11 +16,45 @@
 
 }
 
+
+
 @media screen and (max-width:1024px) {
 }
 
+
+
 /* Responsive nav kicks in */
 @media screen and (max-width:991px) {
+
+	.dickinson, .eliot, .theater, .map {
+    width: 100%;
+  }
+
+  .blog .blog-img-wrap {
+  	width: 100%;
+  }
+
+  .peru {
+  	margin-top: 40px;
+  }
+
+  .text-right .poem-number {
+    text-align: left;
+  }
+
+  .conversation-topics {
+  	margin-left: 10px;
+  }
+
+  .accommodations {
+  	font-size: 2.75em;
+  }
+
+  .light-box {
+    margin: 20px;
+    border: 1pt solid rgba(28, 54, 83, .2);
+  }
+
 	header {
 		width: 90%;
 		padding-left: 25px;
@@ -31,7 +66,7 @@
 
 	.header-nav {
 		position: fixed;
-		background-color: #000;
+		background-color: #373D4A;
 		width: 100%;
 		height: 100%;
 		top: 0;
@@ -51,9 +86,9 @@
 		visibility: visible;
 	}
 
-	header .nav-wrapper {
+	/*header .nav-wrapper {
 		display: absolute;
-	}
+	}*/
 
 	header nav {
 		position: relative;
@@ -67,9 +102,8 @@
 
 	nav ul li a {
 		color: #fff;
-		font-size: 25px;
+		font-size: 1.25em;
 		text-transform: uppercase;
-		font-weight: 600;
 		-moz-transition: all 300ms ease-in-out;
 		-o-transition: all 300ms ease-in-out;
 		-webkit-transition: all 300ms ease-in-out;
@@ -184,7 +218,7 @@
 
 	.intro-content {
 		display: inline-block;
-		width: 75%;
+		width: 100%;
 		margin-bottom: 30px;
 	}
 
@@ -235,13 +269,17 @@
 		margin: 120px 0 120px 0;
 	}
 
+}
+
+
 	@media screen and (max-width:640px) {
+
 		footer ul.footer-group {
 			border-top: none;
 		}
 
 		footer ul.footer-group li a {
-			font-size: 13px;
+			font-size: 1em;
 			text-transform: uppercase;
 			padding: 20px 0;
 			display: block;
@@ -258,7 +296,14 @@
 
 	}
 
+
+
 	@media screen and (max-width:480px) {
+		
+		.hero {
+			min-height: 0;
+		}
+
 		.hero .hero-content {
 			padding-top: 41%;
 		}
@@ -274,7 +319,38 @@
 		}
 
 		.hero h1 {
-			font-size: 50px;
+			font-size: 30px;
+			margin-bottom: 80px;
+		}
+
+    .viddy {
+		  position: relative;
+		  padding-bottom: 56.25%; /* 16:9 */
+		  padding-top: 25px;
+		  height: 0;
+		}
+
+		.viddy iframe {
+		  position: absolute;
+		  top: 0;
+		  left: 0;
+		  width: 100%;
+		  height: 100%;
+		}
+
+		.morgan-okane-viddy {
+		  position: relative;
+		  padding-bottom: 56.25%; /* 16:9 */
+		  padding-top: 25px;
+		  height: 0;
+		}
+
+		.morgan-okane-viddy iframe {
+		  position: absolute;
+		  top: 0;
+		  left: 0;
+		  width: 100%;
+		  height: 100%;
 		}
 
 		.btn-margin-right {
@@ -292,7 +368,7 @@
 		.features .ipad-wrap {
 			width: 706px;
 			height: 1002px;
-			background: url("../img/ipad-device.png") no-repeat center center;
+			background: url("../img/dickinson.png") no-repeat center center;
 			z-index: 1;
 			background-size: 40%;
 		}
@@ -300,7 +376,7 @@
 		.features .iphone-wrap {
 			width: 304px;
 			height: 617px;
-			background: url("../img/iphone6.png") no-repeat center center;
+			background: url("../img/eliot.png") no-repeat center center;
 			position: absolute;
 			left: 350px;
 			bottom: 129px;
@@ -316,7 +392,28 @@
 			display: none;
 		}
 
+		p {
+			font-size: 1em;
+		}
+
+		.blog-post p {
+			font-size: 1em;
+		}
+
+		.intro-content, .poem {
+			font-size: 1.5em;
+		}
+
+		.brighten {
+			font-size: .75em;
+		}
+
+		h2 {
+			font-size: 3em;
+		}
+
 	}
 
-	@media screen and (max-width:320px) {
+  @media screen and (max-device-width:320px) {
+
 	}
