--- a/gtrainlovestory/css/styles.css
+++ b/gtrainlovestory/css/styles.css
@@ -291,7 +291,8 @@ body {
   font-family: "Open Sans", sans-serif;
   font-weight: 300;
   color: rgba(28, 54, 83, 0.6);
-  -webkit-text-size-adjust: 100%;
+  /*-webkit-text-size-adjust: 100%;*/
+  text-size-adjust: auto;
 }
 
 ul, ol {
