--- a/our-trip-to-peru/css/custom.css
+++ b/our-trip-to-peru/css/custom.css
@@ -83,7 +83,7 @@ ul li img {
   background-color: #69ffab;
 }
 
-.header-title {
+.page-title {
   position: fixed;
 }
 
@@ -174,7 +174,6 @@ h3.day {
 a.resource-link {
   font-size: 1.2em;
   background-color: #01FF70;
-
 }
 
 a.resource-link:focus, a.resource-link:hover {
@@ -197,6 +196,21 @@ a.resource-link:focus, a.resource-link:hover {
   border: none;
 }
 
+figure.thumb-container {
+  opacity: 1;
+  -webkit-transition: .3s ease-in-out;
+  transition: .3s ease-in-out;
+}
+
+figure.thumb-container:hover {
+  opacity: .5;
+}
+
+img.thumb {
+  opacity: 0;
+  transition: opacity .3s ease-in;
+}
+
 strong {
   font-weight: 600;
 }
@@ -206,7 +220,52 @@ small a:focus, small a:hover {
   text-decoration: none;
 }
 
+.responsive-video {
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 30px; height: 0; overflow: hidden;
+}
+
+.responsive-video iframe,
+.responsive-video object,
+.responsive-video embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+@media (max-height: 600px){
+  .blueimp-gallery .modal-body {
+    padding: 0 0 50% 0 !important;
+  }
+}
+
 @media (max-width: 500px) {
+  
+  .container-fluid {
+    margin: 0;
+    padding: 0;
+  }
+  
+  h1 {
+    font-size: 3em;
+  }
+
+  h2 {
+    font-size: 2em;
+  }
+
+  .inline-pic, .inline-pic-right {
+    display: block;
+    width: 100%;
+    padding: 2em 0;
+  }
+
+  .resource-span {
+    padding-bottom: 15px;
+  }
 
 }
 
