--- a/our-trip-to-peru/css/custom.css
+++ b/our-trip-to-peru/css/custom.css
@@ -256,6 +256,10 @@ small a:focus, small a:hover {
   height: 100%;
 }
 
+.final-section {
+  margin-bottom: 0;
+}
+
 @media (max-height: 600px){
   .blueimp-gallery .modal-body {
     padding: 0 0 50% 0 !important;
