--- a/jules-timeline/css/styles.css
+++ b/jules-timeline/css/styles.css
@@ -8,6 +8,17 @@ h1.page-header {
   line-height: 1.6;
   letter-spacing: .1em;
   color: #85144b;
+  margin-top: .25em;
+  margin-bottom: .5em;
+  padding-bottom: .5em;
+}
+
+h2.entry-header {
+  font-family: 'Nixie One', Helvetica, Arial, Sans-Serif;
+  font-size: 1.5em;
+  line-height: 1.6;
+  letter-spacing: .1em;
+  color: #85144b;
   margin-bottom: .5em;
   padding-bottom: .5em;
 }
@@ -43,6 +54,7 @@ blockquote {
 
 li {
   list-style: none;
+  line-height: 2;
 }
 
 /*media queries*/
